tests/fixtures/pass/property-type.php
<?php

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

class Foo
{
    /**
     * @var int
     */
    public $id;

    /**
     * @var Bar
     */
    public $command;
}
