tests/fixtures/fail/property-type.php
<?php
namespace Chaozhuo\Helper;

class Foo
{
    /**
     * @var Bar
     */
    public $id;
}